--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,3 +31,6 @@ jobs:
 
       - name: 'Push image to GCP artifactory'
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/citric-abbey-486609-f8/notely-ar-repo/notely:latest .
+
+      - name: Deploy to Cloud Run
+        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/citric-abbey-486609-f8/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project citric-abbey-486609-f8 --max-instances=4
