--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,9 +5,11 @@ on:
     branches: [main]
 
 jobs:
-  tests:
+  deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
     steps:
       - name: Check out code
@@ -18,8 +20,14 @@ jobs:
         with:
           go-version: "1.25.1"
 
+      - name: Setup goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
+
       - name: Build app
         run: ./scripts/buildprod.sh
+
+      - name: Migrate scheme
+        run: ./scripts/migrateup.sh
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
